// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderCell/> should render 1`] = `
<td
  class="wrapper foo normal"
>
  Foo
</td>
`;

exports[`<HeaderCell/> should render in small size 1`] = `
<td
  class="wrapper foo small"
>
  Foo
</td>
`;

exports[`<HeaderCell/> should render in smallest size 1`] = `
<td
  class="wrapper foo smallest"
>
  Foo
</td>
`;
